# my_project_django

./: .gitignore  README.md  pyproject.toml
catalog/: urls.py  views.py
project_django/: .gitignore  README.md
project_django/catalog/: urls.py
project_django/config/: settings.py  urls.py
