[tool.poetry]
name = "project-django"
version = "0.1.0"
description = ""
authors = ["Nikolay Senchikhin <serenecodedrive247@gmail.com>"]
readme = "README.md"
packages = [{include = "project_django", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
